  GRAMPS' ids. You can now set a prefix for each type (such as "I-"
  for individuals) or specify more powerful formatting using C-like
  format statements (such as "I-%04d").
* Adoption relationships are visible on the pedigree view (seen as
  a dotted line).
* Reordering GRAMPS' ids attempts to preserve the integer originally
  assigned to the object.

Version 0.5.1
* Bug fixes
* Allow gramps' ids to be edited
* Added Jesper Zedlitz's PAF for Palm export
* Progress report on GEDCOM import
* Add a new person from the parent selection dialog
* Improved configure script for FreeBSD
* Documenation improvements
* Slight performance improvements reading large databases

Version 0.5.0
* New pedegree form which can display 3, 4, or 5 generations
  depending on the screen size. Supports better navigation.
* Added a Find function to quickly find people.
* Implemented Place objects, allowing additional information
  to be stored about a place.
* New icons for Person View and Family View.
* Online documentation.
* Pressing enter on qualifier field for a filter will apply
  the filter.
* New verification tool added to look for odd things in the
  database.
* Improvements in GEDCOM import, including handling some
  Family Tree Maker pecularities.
* Spanish translation is now available. This brings the languages
  to English, Spanish, Swedish, German, and French.

Version 0.4.1
* Tool/Report menus added to top level menu bar
* Extract Titles and Nicknames plugin improved to provide more
  information
* Several bug fixes, including the problem of swapping father/
  mother relationships in families
* Significant improvements in speed for updating displays after
  adding, editing, or deleting people, and for applying filters.
* Added Bruce DeGrasse's Detailed Ancestral Report. This will
  eventually replace the current Ancestral Report.

Version 0.4.0
* Redesigned Family page. More complex family relationships can be
  handled.
* ISO date format supported